--- a/conf_files/php-fpm.conf
+++ b/conf_files/php-fpm.conf
@@ -307,3 +307,5 @@ ping.response = pong
 ;php_admin_value[error_log] = /var/log/fpm-php.www.log
 ;php_admin_flag[log_errors] = on
 ;php_admin_value[memory_limit] = 32M
+
+php_admin_value[sendmail_path] = /usr/sbin/sendmail -t -i
